@@ -358,7 +358,11 @@ pm-saw=Saw
 pm-sodium-grenade=Sodium 'bath bomb'
 pm-stibnite=Stibnite
 pm-polysilicon-rod=Polysilicon rod
-
+pm-mixed-trace-astatine=Mixed trace astatine
+pm-trace-astatine-209=Trace astatine-209
+pm-trace-astatine-210=Trace astatine-210
+pm-trace-astatine-211=Trace astatine-211
+pm-mixed-astatine-filled-MOT-trap=Mixed astatine magneto orbital trap
 
 automation-science-pack=Transition Metal pack
 logistic-science-pack=Advanced Transition Metal pack
@@ -377,7 +381,6 @@ pm-kerosene-canister=Kerosene fuel canister
 pm-petrol-canister=Petrol fuel canister
 pm-naptha-canister=Naptha fuel canister
 pm-empty-fuel-canister=Empty fuel canister
-
 
 [entity-name]
 pm-nickel-ore=Nickel ore
