@@ -238,6 +238,13 @@ data:extend({
     name = "pm-cadnium-ore",
     icon_size = 64,
     icon = "__periodic-madness__/graphics/icons/ores/cadnium-ore-icon.png",
+    pictures =
+    {
+      { filename = "__periodic-madness__/graphics/icons/ores/cadnium-ore-icon.png", size = 64, scale = 0.5 },
+      { filename = "__periodic-madness__/graphics/icons/ores/cadnium-ore-icon-1.png", size = 64, scale = 0.5 },
+      { filename = "__periodic-madness__/graphics/icons/ores/cadnium-ore-icon-2.png", size = 64, scale = 0.5 },
+      { filename = "__periodic-madness__/graphics/icons/ores/cadnium-ore-icon-3.png", size = 64, scale = 0.5 },
+    },
     subgroup = "pm-cadnium-tm",
     order = "a",
     stack_size = 200
